Install tools into "bin" directory

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -6,8 +6,8 @@ include ../lib/Makefile.ax
 
 install-local:
 	install -d -o $(USER) -g $(GROUP) -m 755 \
-	 $(DESTDIR)$(PREFIX)/sbin
+	 $(DESTDIR)$(PREFIX)/bin
 	install -o $(USER) -g $(GROUP) -m 755 mkmysqldump \
-	 $(DESTDIR)$(PREFIX)/sbin/mkmysqldump
+	 $(DESTDIR)$(PREFIX)/bin/mkmysqldump
 	install -o $(USER) -g $(GROUP) -m 755 mkmysqlslave \
- 	 $(DESTDIR)$(PREFIX)/sbin/mkmysqlslave
+ 	 $(DESTDIR)$(PREFIX)/bin/mkmysqlslave
